Description alignment fix.

--- a/website/o3dv/css/website.css
+++ b/website/o3dv/css/website.css
@@ -240,7 +240,7 @@ div.ov_sidebar_content div.ov_sidebar_settings_content
 div.ov_sidebar_content div.ov_sidebar_settings_description
 {
 	color: var(--ov_light_icon_color);
-	margin: 10px 0px 0px 43px;
+	margin: 10px 0px 0px 40px;
 	float: left;
 }
 
